--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8090
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/nypl?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/nypl?autoReconnect=true&useSSL=false&serverTimezone=America/New_York
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=recap
 spring.datasource.password=recap
